--- a/app/src/main/res/layout/dialog_personal_info.xml
+++ b/app/src/main/res/layout/dialog_personal_info.xml
@@ -8,15 +8,15 @@
     android:orientation="vertical">
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="380dp"
-        android:layout_height="325dp"
+        android:layout_width="370dp"
+        android:layout_height="330dp"
         android:layout_gravity="center"
         android:background="@null">
 
         <ImageView
             android:id="@+id/iv_bg_personal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="370dp"
+            android:layout_height="330dp"
             android:src="@drawable/bg_civilian"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -26,19 +26,27 @@
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/relativeLayout2"
-            android:layout_width="250dp"
-            android:layout_height="197dp"
+            android:layout_width="257dp"
+            android:layout_height="245dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.505"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.578">
+            app:layout_constraintVertical_bias="0.917"
+            tools:ignore="MissingConstraints">
 
             <ImageButton
                 android:id="@+id/btn_personal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
                 android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
                 android:background="@null"
                 android:src="@drawable/ic_personal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -49,6 +57,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginRight="7dp"
+                android:layout_marginTop="5dp"
                 android:background="@null"
                 android:src="@drawable/ic_close_per"
                 app:layout_constraintRight_toRightOf="parent"
@@ -56,16 +65,16 @@
 
             <com.whzl.mengbi.ui.widget.view.CircleImageView
                 android:id="@+id/iv_user_avatar"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
                 android:layout_marginTop="33dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.497"
+                app:layout_constraintHorizontal_bias="0.494"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.033" />
+                app:layout_constraintVertical_bias="0.077" />
 
             <TextView
                 android:id="@+id/tv_ranking"
@@ -81,7 +90,7 @@
                 android:maxEms="10"
                 android:paddingTop="3dp"
                 android:textColor="@color/white"
-                android:textSize="6dp"
+                android:textSize="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.496"
                 app:layout_constraintStart_toStartOf="parent"
@@ -93,7 +102,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:textColor="@color/text_view"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -113,7 +122,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:textColor="@color/font_color_11"
-                    android:textSize="9sp" />
+                    android:textSize="11sp" />
 
                 <com.whzl.mengbi.ui.widget.view.PrettyNumText
                     android:id="@+id/tv_pretty_num"
@@ -127,7 +136,8 @@
             <LinearLayout
                 android:id="@+id/ll_level_container"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -137,8 +147,9 @@
             <TextView
                 android:id="@+id/tv_introduce"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="17dp"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginRight="10dp"
                 android:ellipsize="end"
                 android:gravity="center"
@@ -146,80 +157,94 @@
                 android:singleLine="true"
                 android:text="@string/no_motto_hint"
                 android:textColor="@color/font_color_11"
-                android:textSize="9sp"
+                android:textSize="11sp"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/ll_level_container" />
 
             <LinearLayout
-                android:id="@+id/linearLayout2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_marginBottom="10dp"
+                android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent">
 
-                <TextView
-                    android:id="@+id/tv_follow"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:textSize="12sp"
-                    android:visibility="gone" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@color/tran_grey" />
 
-                <RelativeLayout
-                    android:id="@+id/rl_at"
-                    android:layout_width="0dp"
+                <LinearLayout
+                    android:id="@+id/linearLayout2"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1">
+                    android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/tv_at"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/tv_follow"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:text="@string/at"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:textSize="14sp"
+                        android:visibility="gone" />
+
+                    <RelativeLayout
+                        android:id="@+id/rl_at"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:id="@+id/tv_at"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:text="@string/at"
+                            android:textColor="@color/font_color_11"
+                            android:textSize="14sp" />
+
+                        <ImageView
+                            android:layout_width="12dp"
+                            android:layout_height="12dp"
+                            android:layout_marginTop="4dp"
+                            android:layout_toLeftOf="@id/tv_at"
+                            android:src="@drawable/ic_at" />
+
+                    </RelativeLayout>
+
+
+                    <TextView
+                        android:id="@+id/tv_private_chat"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="私信"
                         android:textColor="@color/font_color_11"
-                        android:textSize="12sp" />
+                        android:textSize="14sp"
+                        android:visibility="gone" />
 
-                    <ImageView
-                        android:layout_width="10dp"
-                        android:layout_height="10dp"
-                        android:layout_marginTop="4dp"
-                        android:layout_toLeftOf="@id/tv_at"
-                        android:src="@drawable/ic_at" />
+                    <RelativeLayout
+                        android:id="@+id/rl_more"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1">
 
-                </RelativeLayout>
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/ic_three_point" />
+                    </RelativeLayout>
 
-
-                <TextView
-                    android:id="@+id/tv_private_chat"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="私信"
-                    android:textColor="@color/font_color_11"
-                    android:textSize="12sp"
-                    android:visibility="gone" />
-
-                <RelativeLayout
-                    android:id="@+id/rl_more"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:src="@drawable/ic_three_point" />
-                </RelativeLayout>
-
-
+                </LinearLayout>
             </LinearLayout>
+
 
             <ImageButton
                 android:id="@+id/btn_buy_royal"
@@ -236,10 +261,10 @@
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.982"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.412"
+                app:layout_constraintVertical_bias="0.356"
                 tools:ignore="MissingConstraints" />
 
         </android.support.constraint.ConstraintLayout>
