--- a/app/src/main/res/layout/dialog_free_gift.xml
+++ b/app/src/main/res/layout/dialog_free_gift.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="257dp"
-        android:background="#e6000000"
+        android:background="#000000"
         android:orientation="vertical">
 
         <LinearLayout
@@ -32,7 +32,7 @@
                     android:drawablePadding="4dp"
                     android:text="每日登录"
                     android:textColor="#fefefe"
-                    android:textSize="12sp" />
+                    android:textSize="@dimen/text_title_free_gift" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -45,15 +45,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="每日登录萌比直播即可奖励 "
-                        android:textColor="#40fefefe"
-                        android:textSize="9sp" />
+                        android:textColor="@color/text_content_free_gift"
+                        android:textSize="@dimen/text_content_free_gift" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="蓝色妖姬x1"
                         android:textColor="#fff800"
-                        android:textSize="9sp" />
+                        android:textSize="@dimen/text_content_free_gift" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -64,7 +64,7 @@
                 android:layout_marginRight="12dp"
                 android:gravity="center"
                 android:textColor="#fefefe"
-                android:textSize="10sp" />
+                android:textSize="11sp" />
         </LinearLayout>
 
         <View
@@ -95,7 +95,7 @@
                     android:drawablePadding="4dp"
                     android:text="直播间发言"
                     android:textColor="#fefefe"
-                    android:textSize="12sp" />
+                    android:textSize="@dimen/text_title_free_gift" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -108,29 +108,29 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="在直播间发言最少 "
-                        android:textColor="#40fefefe"
-                        android:textSize="9sp" />
+                        android:textColor="@color/text_content_free_gift"
+                        android:textSize="@dimen/text_content_free_gift" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="5条"
                         android:textColor="#fff800"
-                        android:textSize="9sp" />
+                        android:textSize="@dimen/text_content_free_gift" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=" 即可奖励 "
-                        android:textColor="#40fefefe"
-                        android:textSize="9sp" />
+                        android:textColor="@color/text_content_free_gift"
+                        android:textSize="@dimen/text_content_free_gift" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="蓝色妖姬x5"
                         android:textColor="#fff800"
-                        android:textSize="9sp" />
+                        android:textSize="@dimen/text_content_free_gift" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -141,7 +141,7 @@
                 android:layout_marginRight="12dp"
                 android:gravity="center"
                 android:textColor="#fefefe"
-                android:textSize="10sp" />
+                android:textSize="11sp" />
         </LinearLayout>
 
         <View
@@ -172,7 +172,7 @@
                     android:drawablePadding="4dp"
                     android:text="观看直播"
                     android:textColor="#fefefe"
-                    android:textSize="12sp" />
+                    android:textSize="@dimen/text_title_free_gift" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -185,8 +185,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="您需观看 "
-                        android:textColor="#40fefefe"
-                        android:textSize="9sp" />
+                        android:textColor="@color/text_content_free_gift"
+                        android:textSize="@dimen/text_content_free_gift" />
 
                     <TextView
                         android:id="@+id/tv_time"
@@ -194,14 +194,14 @@
                         android:layout_height="wrap_content"
                         android:text="5分钟"
                         android:textColor="#fff800"
-                        android:textSize="9sp" />
+                        android:textSize="@dimen/text_content_free_gift" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=" 即可奖励 "
-                        android:textColor="#40fefefe"
-                        android:textSize="9sp" />
+                        android:textColor="@color/text_content_free_gift"
+                        android:textSize="@dimen/text_content_free_gift" />
 
                     <TextView
                         android:id="@+id/tv_get_num"
@@ -209,7 +209,7 @@
                         android:layout_height="wrap_content"
                         android:text="蓝色妖姬x5"
                         android:textColor="#fff800"
-                        android:textSize="9sp" />
+                        android:textSize="@dimen/text_content_free_gift" />
 
                     <TextView
                         android:id="@+id/tv_buy_card"
@@ -218,7 +218,7 @@
                         android:layout_marginLeft="17dp"
                         android:text="购买妖姬卡，获得双倍奖励"
                         android:textColor="#ff3aea"
-                        android:textSize="9sp"
+                        android:textSize="@dimen/text_content_free_gift"
                         android:textStyle="italic" />
                 </LinearLayout>
             </LinearLayout>
