--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -27,7 +27,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/translucent_black">
+                    android:background="#00000000">
 
                     <ImageButton
                         android:id="@+id/btn_back"
@@ -55,7 +55,7 @@
                         android:singleLine="true"
                         android:text="昵称"
                         android:textColor="@color/white"
-                        android:textSize="12sp"
+                        android:textSize="13sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -68,7 +68,7 @@
                         android:singleLine="true"
                         android:text="@string/no_motto_hint"
                         android:textColor="@color/text_sign"
-                        android:textSize="9sp" />
+                        android:textSize="10sp" />
 
                     <LinearLayout
                         android:id="@+id/ll_level_container"
