--- a/app/src/main/res/layout/dialog_personal_info.xml
+++ b/app/src/main/res/layout/dialog_personal_info.xml
@@ -113,6 +113,7 @@
                 android:id="@+id/rl_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_nick_name">
@@ -220,7 +221,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:textColor="@color/font_color_11"
+                            android:textColor="@color/tran_black2"
                             android:textSize="14sp" />
 
                         <View
@@ -242,7 +243,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="私信"
-                            android:textColor="@color/font_color_11"
+                            android:textColor="@color/tran_black2"
                             android:textSize="14sp"
                             android:layout_centerInParent="true" />
 
