--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -199,4 +199,6 @@
     <color name="text_purple">#ff36f3</color>
     <color name="tran_grey">#11eeeeee</color>
     <color name="tran_grey2">#66eeeeee</color>
+    <color name="tran_black">#30000000</color>
+    <color name="tran_black2">#70000000</color>
 </resources>
