--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -12,15 +12,22 @@
         android:background="@drawable/bg_login_dialog">
 
 
-        <ImageButton
-            android:id="@+id/ib_close"
-            android:layout_width="12dp"
-            android:layout_height="12dp"
+        <LinearLayout
+            android:id="@+id/ll_close"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_alignParentRight="true"
             android:layout_marginRight="20dp"
             android:layout_marginTop="17dp"
-            android:background="@null"
-            android:src="@drawable/close_icon" />
+            android:gravity="center_horizontal">
+
+            <ImageButton
+                android:id="@+id/ib_close"
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:background="@null"
+                android:src="@drawable/close_icon" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tv_title"
