--- a/app/src/main/res/layout/fragment_liveweb.xml
+++ b/app/src/main/res/layout/fragment_liveweb.xml
@@ -7,7 +7,7 @@
     <com.github.lzyzsd.jsbridge.BridgeWebView
         android:id="@+id/JsBridgeWebView"
         android:layout_centerHorizontal="true"
-        android:layout_width="61dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:overScrollMode="never" />
 
