--- a/app/src/main/res/layout/fragment_anchor_task.xml
+++ b/app/src/main/res/layout/fragment_anchor_task.xml
@@ -7,7 +7,8 @@
     <ImageView
         android:id="@+id/iv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
 
     <TextView
         android:id="@+id/tv"
