--- a/app/src/main/res/layout/layout_pretty_num.xml
+++ b/app/src/main/res/layout/layout_pretty_num.xml
@@ -10,6 +10,8 @@
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:gravity="center"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
         android:text="靓"/>
 
     <TextView
