--- a/app/src/main/res/layout/fragment_liveweb.xml
+++ b/app/src/main/res/layout/fragment_liveweb.xml
@@ -12,8 +12,9 @@
         android:overScrollMode="never" />
 
     <View
+        android:layout_centerInParent="true"
         android:id="@+id/view"
-        android:layout_width="match_parent"
+        android:layout_width="55dp"
         android:layout_height="match_parent"
         android:background="@color/transparent" />
 </RelativeLayout>
