--- a/app/src/main/res/layout/item_audience.xml
+++ b/app/src/main/res/layout/item_audience.xml
@@ -23,7 +23,7 @@
     <LinearLayout
         android:id="@+id/ll_level_container"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:layout_below="@id/tv_name"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="3dp"
