--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -27,7 +27,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#00000000">
+                    android:background="@color/tran_black2">
 
                     <ImageButton
                         android:id="@+id/btn_back"
@@ -122,14 +122,32 @@
                             android:layout_height="49dp"
                             android:orientation="horizontal">
 
-                            <TextView
-                                android:id="@+id/tv_ranking"
+                            <LinearLayout
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:gravity="center"
-                                android:textColor="@color/white"
-                                android:textSize="12sp" />
+                                android:gravity="center_vertical"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/tv_ranking"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_horizontal"
+                                    android:gravity="center"
+                                    android:textColor="@color/white"
+                                    android:textSize="12sp" />
+
+                                <TextView
+                                    android:id="@+id/tv_rank_name"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_horizontal"
+                                    android:gravity="center"
+                                    android:textColor="@color/tran_white1"
+                                    android:textSize="10sp" />
+                            </LinearLayout>
+
 
                             <View
                                 android:layout_width="1dp"
@@ -137,14 +155,31 @@
                                 android:layout_gravity="center_vertical"
                                 android:background="@color/tran_grey" />
 
-                            <TextView
-                                android:id="@+id/tv_fans_count"
+                            <LinearLayout
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:gravity="center"
-                                android:textColor="@color/white"
-                                android:textSize="12sp" />
+                                android:gravity="center_vertical"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/tv_fans_count"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_horizontal"
+                                    android:gravity="center"
+                                    android:textColor="@color/white"
+                                    android:textSize="12sp" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_horizontal"
+                                    android:gravity="center"
+                                    android:text="粉丝"
+                                    android:textColor="@color/tran_white1"
+                                    android:textSize="10sp" />
+                            </LinearLayout>
 
                             <View
                                 android:layout_width="1dp"
@@ -152,14 +187,32 @@
                                 android:layout_gravity="center_vertical"
                                 android:background="@color/tran_grey" />
 
-                            <TextView
-                                android:id="@+id/tv_follow"
+                            <LinearLayout
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:gravity="center"
-                                android:textColor="@color/white"
-                                android:textSize="12sp" />
+                                android:gravity="center_vertical"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/tv_follow"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_horizontal"
+                                    android:gravity="center"
+                                    android:textColor="@color/white"
+                                    android:textSize="12sp" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_horizontal"
+                                    android:gravity="center"
+                                    android:text="关注"
+                                    android:textColor="@color/tran_white1"
+                                    android:textSize="10sp" />
+                            </LinearLayout>
+
                         </LinearLayout>
                     </LinearLayout>
 
