--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -319,13 +319,17 @@
 
                 <TextView
                     android:id="@+id/tv_address"
-                    android:layout_width="57dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="20dp"
                     android:layout_marginLeft="15dp"
                     android:background="@drawable/shape_round_rect_blue"
                     android:gravity="center"
                     android:textColor="@color/text_blue"
                     android:textSize="12sp"
+                    android:maxLength="5"
+                    android:singleLine="true"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:visibility="gone" />
 
                 <TextView
@@ -337,6 +341,8 @@
                     android:gravity="center"
                     android:textColor="@color/text_green"
                     android:textSize="12sp"
+                    android:maxLength="4"
+                    android:singleLine="true"
                     android:visibility="gone" />
 
                 <TextView
@@ -348,6 +354,7 @@
                     android:gravity="center"
                     android:textColor="@color/text_purple"
                     android:textSize="12sp"
+                    android:singleLine="true"
                     android:visibility="gone" />
             </LinearLayout>
 
