--- a/app/src/main/res/layout/fragment_live_week_rank.xml
+++ b/app/src/main/res/layout/fragment_live_week_rank.xml
@@ -36,6 +36,7 @@
                 android:id="@+id/tv_rank_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
                 android:gravity="end"
                 android:textColor="#505050"
                 android:textSize="9sp" />
