--- a/app/src/main/res/layout/item_rank_top_3.xml
+++ b/app/src/main/res/layout/item_rank_top_3.xml
@@ -38,18 +38,18 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_centerVertical="true"
-                app:civ_border_width="0.5dp"/>
+                app:civ_border_width="0.5dp" />
 
             <TextView
                 android:id="@+id/tv_status"
                 android:layout_width="32dp"
                 android:layout_height="12dp"
                 android:layout_alignBottom="@id/iv_avatar"
-                android:gravity="center"
-                android:textSize="9sp"
-                android:text="直播中"
                 android:layout_centerHorizontal="true"
-                android:visibility="gone"/>
+                android:gravity="center"
+                android:text="直播中"
+                android:textSize="9sp"
+                android:visibility="gone" />
 
         </RelativeLayout>
 
@@ -69,12 +69,13 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
+            android:layout_toLeftOf="@id/rl_gap_container"
             android:layout_toRightOf="@id/iv_user_level"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:maxEms="7"
             android:ellipsize="middle"
-            android:singleLine="true"/>
+            android:maxEms="7"
+            android:singleLine="true"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
 
         <RelativeLayout
