--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -204,4 +204,5 @@
     <color name="tran_white1">#90ffffff</color>
 
     <color name="text_content_free_gift">#90fefefe</color>
+    <color name="tab_follow">#fdfdfd</color>
 </resources>
