--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -344,4 +344,20 @@
         <item name="android:windowExitAnimation" >@anim/dialog_exit_anim</item>
     </style>
 
+    <style name="FollowTab" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorColor">#fed634</item>
+        <item name="tabIndicatorHeight">2.5dp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="tabBackground">@color/tab_follow</item>
+        <item name="tabTextAppearance">@style/FollowTabText</item>
+        <item name="tabSelectedTextColor">#323232</item>
+        <item name="tabGravity">fill</item>
+        <item name="tabMode">fixed</item>
+    </style>
+
+    <style name="FollowTabText" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">#40323232</item>
+        <item name="textAllCaps">true</item>
+    </style>
 </resources>
