--- a/app/src/main/res/layout/fragment_follow.xml
+++ b/app/src/main/res/layout/fragment_follow.xml
@@ -2,23 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/appBg"
     android:orientation="vertical">
 
-    <TextView
-        style="@style/fragmentTitleText"
-        android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:background="@color/main_tab_color"
-        android:gravity="center"
-        android:text="@string/follow_title"
-        android:textColor="@color/text_view"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+    <!--<TextView-->
+        <!--style="@style/fragmentTitleText"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="46dp"-->
+        <!--android:background="@color/main_tab_color"-->
+        <!--android:gravity="center"-->
+        <!--android:text="@string/follow_title"-->
+        <!--android:textColor="@color/text_view"-->
+        <!--android:textSize="18sp"-->
+        <!--android:textStyle="bold" />-->
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp" />
+    <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0.5dp" />-->
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refresh_layout"
