--- a/app/src/main/res/layout/fragment_follow_main.xml
+++ b/app/src/main/res/layout/fragment_follow_main.xml
@@ -4,8 +4,20 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.design.widget.TabLayout
+    <net.lucode.hackware.magicindicator.MagicIndicator
+        android:id="@+id/tab_follow"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        style="@style/FollowTab"/>
+        android:background="#fdfdfd" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.3dp" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_follow"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:overScrollMode="never" />
 </LinearLayout>
