--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -176,7 +176,7 @@
     <color name="text_color_lottery">#fe3f7e</color>
     <color name="text_color_system">#acd3ff</color>
     <color name="text_color_sendgif">#FFFE3F7E</color>
-    <color name="bg_dialog_gift_live">#2a2e36</color>
+    <color name="bg_dialog_gift_live">#000000</color>
 
     <color name="text_color_kickout_bei">#f9f9f9</color>
     <color name="text_color_kickout_people">#f9f9f9</color>
