--- a/app/src/main/res/drawable/bg_live_house_gift_bg.xml
+++ b/app/src/main/res/drawable/bg_live_house_gift_bg.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
-    <solid android:color="#ff2b3f" />
-    <corners android:radius="12dp" />
+    <corners android:radius="3dp" />
+    <stroke
+        android:width="1dp"
+        android:color="#ffeb00" />
 </shape>
