--- a/app/src/main/res/layout/dialog_live_house_gift.xml
+++ b/app/src/main/res/layout/dialog_live_house_gift.xml
@@ -35,7 +35,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="180dp">
+        android:layout_height="185dp">
 
     </android.support.v4.view.ViewPager>
 
@@ -48,22 +48,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tv_mengbi"
+            <ImageView
+                android:id="@+id/iv_mengbi"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="14dp"
-                android:gravity="center"
-                android:text="萌币:"
-                android:textColor="#fefefe"
-                android:textSize="@dimen/text_size_dialog_gift" />
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="4.5dp"
+                android:src="@drawable/ic_coin_gift_dialog" />
 
             <TextView
                 android:id="@+id/tv_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/tv_mengbi"
+                android:layout_marginLeft="7.5dp"
+                android:layout_toRightOf="@id/iv_mengbi"
                 android:drawablePadding="15dp"
                 android:gravity="center"
                 android:text="0"
@@ -79,7 +78,6 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="7.5dp"
                 android:layout_toRightOf="@id/tv_amount"
-                android:background="@drawable/btn_dialog_gift_recharge"
                 android:gravity="center"
                 android:paddingBottom="3dp"
                 android:paddingLeft="6dp"
