--- a/app/src/main/res/layout/item_live_house_backpack.xml
+++ b/app/src/main/res/layout/item_live_house_backpack.xml
@@ -2,8 +2,8 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rl"
-    android:layout_width="67dp"
-    android:layout_height="82dp">
+    android:layout_width="match_parent"
+    android:layout_height="80dp">
 
     <View
         android:id="@+id/view_select_mark"
@@ -13,11 +13,12 @@
 
     <ImageView
         android:id="@+id/iv_gift"
-        android:layout_width="30dp"
-        android:layout_height="35dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="15dp"
+        android:scaleType="fitEnd" />
 
 
     <TextView
