--- a/app/src/main/res/layout/item_live_house_gift.xml
+++ b/app/src/main/res/layout/item_live_house_gift.xml
@@ -2,17 +2,18 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rl"
-    android:layout_width="67dp"
-    android:layout_height="82dp">
+    android:layout_width="match_parent"
+    android:layout_height="80dp">
 
 
     <ImageView
         android:id="@+id/iv_gift"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="4.5dp"
+        android:scaleType="fitEnd" />
 
     <TextView
         android:id="@+id/tv_gift_name"
@@ -34,11 +35,11 @@
         android:textColor="#80ffffff"
         android:textSize="8sp" />
 
-    <View
-        android:id="@+id/view_select_mark"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/selector_live_house_gift_bg" />
+    <!--<View-->
+    <!--android:id="@+id/view_select_mark"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:background="@drawable/selector_live_house_gift_bg" />-->
 </RelativeLayout>
 
 
